fix font size and spacing

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,7 +12,7 @@ html, body {
 }
 
 .Nav {
-  height: 80px;
+  height: 100px;
   width: 90%;
   max-width: 1200px;
   margin: 0 auto;
@@ -33,7 +33,7 @@ input[type=reset] {
   color: black;
   padding: 0 3px 0;
   margin: 0 5px 0;
-  font-size: 1em;
+  font-size: 1.2em;
 }
 
 .left-nav a:hover, .right-nav a:hover,
@@ -53,7 +53,8 @@ input[type=reset] {
 }
 
 .title a{
-  font-size: 1em;
+  width: 275px;
+  font-size: 1.2em;
   display: inline-block;
   padding-right: 20px;
   text-decoration: none;
@@ -61,7 +62,8 @@ input[type=reset] {
 }
 
 .title a:hover {
-  text-decoration: underline;
+  font-style: italic;
+  /* text-shadow: 0 0 .1px black; */
 }
 
 .left-nav {
@@ -80,6 +82,7 @@ input[type=reset] {
   width: 90%;
   max-width: 1200px;
   margin: 0 auto;
+  padding-top: 30px;
 }
 
 .Grid {
@@ -88,15 +91,16 @@ input[type=reset] {
   grid-gap: 2rem;
 }
 
-/* .Grid > div { */
-  /* border: 1px solid black; */
-  /* padding: 1.5rem; */
-/* } */
+/* .Grid > div {
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: baseline;
+ } */
 
 .footer {
   border-top: 1px solid #999;
   height: 120px;
-  /* background-color: lightblue; */
   margin-top: 2rem;
   display: flex;
   align-items: center;
@@ -114,7 +118,7 @@ input[type=reset] {
 
 .Main form input[type=submit] {
   margin-top: 0.5em;
-  font-size: 1em;
+  font-size: 1.2em;
   text-align: center;
 }
 
@@ -139,14 +143,12 @@ input[type=reset] {
 }
 
 .card-title a {
-  /* font-size: 1em; */
   text-decoration: none;
   color: black;
 }
 
 .card-title a:hover {
-  /* font-size: 1em; */
-  text-decoration: underline;
+  font-style: italic;
 }
 
 .card-photo {
@@ -156,13 +158,13 @@ input[type=reset] {
 .card-photo img {
   width: 100%;
   height: 250px;
-  /* background-color: lightsalmon; */
   object-fit: cover;
 }
 
 .card-details, .article-details {
-  display:inline;
-  font-size: 1em;
+  display:flex;
+  justify-content: space-between;
+  font-size: 1.2em;
 }
 
 .card-details a, .article details a:hover {
@@ -180,7 +182,7 @@ input[type=reset] {
 
 .card-summary {
   margin-top: 0.5em;
-  line-height: 1em;
+  line-height: 1.2em;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
